# smarthome-sensor-dashboard

./: .env.example  .gitignore  .trivyignore  AGENTS.md  ARCHITECTURE.md  HARNESS_WORKFLOW.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/agent-memory/harness-doc-updater/: MEMORY.md
.claude/agent-memory/harness-executor/: MEMORY.md
.claude/agents/: harness-doc-updater.md  harness-executor.md  harness-planner.md  harness-researcher.md
.devcontainer/: devcontainer.json
.github/agents/: harness-doc-updater.agent.md  harness-executor.agent.md  harness-planner.agent.md  harness-researcher.agent.md
.github/workflows/: frontend-deploy.yml  terraform-apply.yml  terraform-ci.yml  test.yml
docs/: FRONTEND.md  NEXT_STEPS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  SUBAGENTS.md
docs/design-docs/: core-beliefs.md  frontend-framework-decision.md  index.md
docs/exec-plans/: tech-debt-tracker.md
docs/product-specs/: index.md
lambda/: README.md
lambda/api/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
lambda/api/models/: sensor.py
lambda/api/tests/: test_main.py
lambda/poller/: .dockerignore  Dockerfile  lambda_function.py  pyproject.toml
pi-client/: .env.example  ble_scanner.py  pyproject.toml
pi-client/systemd/: smarthome-ble.service
scripts/: sync-agents.mjs
src/: vite-env.d.ts
src/app/: App.tsx
src/test/: setup.ts
terraform/: README.md  terragrunt.hcl
(+120 files in other folders)
